1.4: Mon Jun  2 06:52:18 EDT 2008
    - more documentation: what are these for?

1.4: Sun Jun  1 18:21:49 EDT 2008
    - fixed an irritating pseudo-bug in the ADX logic.
    - fixed a divide by zero bug in ADX... grrz.

1.3: Sat May 31 18:43:46 EDT 2008
    - doc bugs in the Bollinger Bands
    - added $class->recommended instantiaters.
    - sqrt(-2.07093e-20) in Bollinger Bands
    - ATR added
    - DMI added

1.2: Wed May 28 16:13:43 EDT 2008
    - version hell still

1.1: Wed May 28 15:29:56 EDT 2008
    - Yeah, my versions were too low on two modules.  Wow.

1.0: Wed May 28 07:36:23 EDT 2008
    - I combined all the Math::Business::* modules I wrote into
      one distribution
    - I made EMA faster and "better" and fixed the while(insert)
      where insert is 0
    - Refactored SMA to be smarter for long DBI calculations and
      possibly less smart for huge multi scalar inserts
    - Authored the RSI module to my tastes
    - Authored the Bollinger Bands module