@@ -138,21 +138,17 @@ sub insert {
 
 sub start_with {
     my $this = shift;
+    croak "you must provide: (aPDM, aMDM, aDX)" unless @_ == 3;
 
-    die "TODO"; # TODO
+    $this->{aPDM} = shift;
+    $this->{aMDM} = shift;
+    $this->{ADX}  = shift;
 }
 
-sub query_pdi {
-    my $this = shift;
-
-    return $this->{PDI};
-}
-
-sub query_mdi {
-    my $this = shift;
-
-    return $this->{MDI};
-}
+sub query_pdi  { my $this = shift; return $this->{PDI}; }
+sub query_mdi  { my $this = shift; return $this->{MDI}; }
+sub query_apdm { my $this = shift; return $this->{aPDM} }
+sub query_amdm { my $this = shift; return $this->{aMDM} }
 
 sub query {
     my $this = shift;
@@ -205,7 +201,11 @@ Math::Business::DMI - Technical Analysis: Directional Movement Index (aka ADX)
   }
 
   # you may use this to kick start 
-  # $dmi->start_with( not finished ); # TODO
+  $dmi->start_with($aPDM, $aMDM, $adx;
+
+  # aPDM and aMDM are internals, to fetch them, use these
+  my $aPDM = $dmi->query_apdm;
+  my $aMDM = $dmi->query_amdm;
 
 =head1 RESEARCHER
 
